# falcon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_yapl.sh
.github/workflows/: build.yml  main.yml
cmake/: FindReadline.cmake
docker/: Dockerfile
docker/gdb-alpine/: Dockerfile
docs/: grammar.md  specs.md
include/: commons.h  yapl.h  yapl_bytecode_chunk.h  yapl_compiler.h  yapl_debug.h  yapl_memory_manager.h  yapl_natives.h  yapl_object.h  yapl_opcodes.h  yapl_table.h  yapl_tokens.h  yapl_utils.h  yapl_value.h  yapl_vm.h
src/: commons.h  falcon.c  falcon.h  yapl.c  yapl.h  yapl_bytecode_chunk.c  yapl_compiler.c  yapl_debug.c  yapl_memory_manager.c  yapl_natives.c  yapl_object.c  yapl_scanner.c  yapl_table.c  yapl_utils.c  yapl_value.c  yapl_vm.c
src/compiler/: falcon_compiler.c  falcon_compiler.h  falcon_scanner.c  falcon_scanner.h  falcon_tokens.h  fl-compiler.c  fl-compiler.h  fl-scanner.c  fl-scanner.h  yapl_compiler.c  yapl_compiler.h  yapl_scanner.c  yapl_scanner.h  yapl_tokens.h
src/core/: fl-bcode.c  fl-bcode.h  fl-compiler.c  fl-compiler.h  fl-debug.c  fl-debug.h  fl-gc.c  fl-gc.h  fl-mem.c  fl-mem.h  fl-object.c  fl-object.h  fl-opcodes.h  fl-scanner.c  fl-scanner.h  fl-tokens.h  fl-value.c  fl-value.h  fl-vm.c  fl-vm.h
src/lib/: falcon_baselib.c  falcon_baselib.h  falcon_debug.c  falcon_debug.h  falcon_error.c  falcon_error.h  falcon_io.c  falcon_io.h  falcon_list.c  falcon_list.h  falcon_map.c  falcon_map.h  falcon_math.c  falcon_math.h  falcon_natives.c  falcon_natives.h  falcon_string.c  falcon_string.h  falcon_sys.c  falcon_sys.h  falcon_table.c  falcon_table.h  fl-baselib.c  fl-baselib.h  fl-iolib.c  fl-iolib.h  fl-listlib.c  fl-listlib.h  fl-maplib.c  fl-maplib.h  fl-mathlib.c  fl-mathlib.h  fl-strlib.c  fl-strlib.h  fl-syslib.c  fl-syslib.h  yapl_debug.c  yapl_debug.h  yapl_error.c  yapl_error.h  (+6 more)
src/lib/io/: falcon_io.c  falcon_io.h  yapl_io.c  yapl_io.h
src/lib/math/: falcon_math.h  yapl_math.c  yapl_math.h
src/lib/string/: falcon_string.c  falcon_string.h  yapl_string.c  yapl_string.h
src/utils/: yapl_utils.c  yapl_utils.h
src/vm/: falcon_bytecode.c  falcon_bytecode.h  falcon_debug.c  falcon_debug.h  falcon_gc.c  falcon_gc.h  falcon_memory.c  falcon_memory.h  falcon_object.c  falcon_object.h  falcon_opcodes.h  falcon_value.c  falcon_value.h  falcon_vm.c  falcon_vm.h  fl-bcode.c  fl-bcode.h  fl-debug.c  fl-debug.h  fl-gc.c  fl-mem.h  fl-opcodes.h  fl-value.h  fl-vm.c  fl-vm.h  yapl_bytecode_chunk.c  yapl_bytecodechunk.c  yapl_bytecodechunk.h  yapl_memmanager.c  yapl_memmanager.h  yapl_memory_manager.c  yapl_memory_manager.h  yapl_object.c  yapl_object.h  yapl_opcodes.h  yapl_value.c  yapl_value.h  yapl_vm.c  yapl_vm.h
